Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43277

QScroller with a touch gesture type doesn't work for QScrollArea

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.4.0
    • None
    • 559152d911ceff8af5020355b35d7a1da100398c

    Description

      QScrollArea is not scrolled by a finger after calling QScroller::grabGesture(scrollArea->viewport()).
      But if I call QScroller::grabGesture() for an item view, then it works.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            avolkov Alexander Volkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes